[package]
name = "logit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = { version = "0.13.22", default-features = false }
regex = { version = "1.5.4", default-features = false, features = [
    "std",
    "perf",
] }
chrono = { version = "0.4", default-features = false, features = [
    "alloc",
    "clock",
] }
